# hyperactive_radio

./: .dir-locals.el  .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
board_support/: Cargo.toml
board_support/src/: consts.rs  encoder.rs  encoder.s  i2s.rs  i2s_in.s  i2s_out.s  lib.rs
embedded-opus/: Cargo.toml  build.rs
embedded-opus/src/: lib.rs
ha_radio/: Cargo.toml  build.rs  memory.x
ha_radio/src/: bench.rs  rx.rs  shared.rs  singlecore_loopback.rs  tx.rs
hardware/combined/: combined.csv  combined.kicad_pcb  combined.kicad_prl  combined.kicad_pro  combined.kicad_sch  rx.kicad_sch  sym-lib-table  tx.kicad_sch  ~combined.kicad_pro.lck
hardware/combined/Library.pretty/: SSD1306_0.96_Oled.kicad_mod
hardware/combined/bom/: ibom.html
hardware/combined/gerbers/: combined-B_Cu.gbr  combined-B_Mask.gbr  combined-B_Paste.gbr  combined-B_Silkscreen.gbr  combined-Edge_Cuts.gbr  combined-F_Cu.gbr  combined-F_Mask.gbr  combined-F_Paste.gbr  combined-F_Silkscreen.gbr  combined-In1_Cu.gbr  combined-In2_Cu.gbr  combined-NPTH.drl  combined-PTH.drl  combined-job.gbrjob
hardware/tx/: ha_radio.bak  ha_radio.kicad_sym  sym-lib-table  tx.kicad_prl  tx.kicad_pro  tx.kicad_sch
opus-sys/: Cargo.toml  build.rs
opus-sys/src/: alloc.c  alloc.h  lib.rs
pcm3060/: Cargo.toml  device.yaml
pcm3060/src/: lib.rs
sx127x/: Cargo.toml
sx127x/src/: error.rs  lib.rs  regs.rs
