[package]
name = "ha_radio"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "tx"
path = "src/tx.rs"
test = false
bench = false

[[bin]]
name = "rx"
path = "src/rx.rs"
test = false
bench = false

[[bin]]
name = "singlecore_loopback"
path = "src/singlecore_loopback.rs"
test = false
bench = false

[dependencies]
embedded-opus = { path = "../embedded-opus", default-features = false }
sx127x = { path = "../sx127x" }
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }
cortex-m-rt = "0.7"
static_cell = "2"
bytemuck = "1"
board_support = { path = "../board_support" }

# Embassy Crates
embassy-executor = { version = "0.10", features = [
    "platform-cortex-m",
    "executor-thread",
    "defmt",
    "executor-interrupt",
    "nightly",
] }
embassy-sync = { version = "0.8", features = ["defmt"] }
embassy-time = { version = "0.5", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.10", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
embassy-futures = { version = "0.1", features = ["defmt"] }
