[package]
name = "pcm3060"
version = "0.1.0"
edition = "2024"

[dependencies]
device-driver = { version = "1", default-features = false, features = ["yaml"] }
defmt = { version = "1", optional = true }
embedded-hal-async = "1"

[features]
default = ["defmt"]
defmt = ["dep:defmt", "embedded-hal-async/defmt-03"]
