[package]
name = "sx127x"
version = "0.1.0"
edition = "2024"

[dependencies]
device-driver = { version = "1", default-features = false, features = ["dsl"] }
embedded-hal-async = "1"
thiserror = { version = "2", default-features = false }
defmt = { version = "1", optional = true }
embassy-time = { version = "0.5" }

[features]
default = ["defmt"]
defmt = ["dep:defmt"]
